remove bugs on the overflow content

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,5 @@
 body{
     background-color: #202462;
-    overflow: hidden;
 }
 li{
    
